--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site for walid menghour cyber security engenier and web developer "
+      content="Web site for Walid Menghour cyber security engenier and web developer "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -15,8 +15,7 @@
     <title>Walid MENGHOUR</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app. LOL I AM NOT A HACKER ...</noscript>
+    <noscript>You need to enable JavaScript to run this app. LOL I AM NOT A HACKER HA HA HA HA  ...</noscript>
     <div id="root"></div>
-
   </body>
 </html>
